added Ricky's fave

--- a/favorites.html
+++ b/favorites.html
@@ -19,7 +19,12 @@
         <td>Michael</td>
         <td>Olson</td>
         <td>Dog</td>
-     </th>
+     </tr>
+     <tr ALIGN="CENTER">
+        <td>Ricky</td>
+        <td>Padilla</td>
+        <td>Elk</td>
+     </tr>
   </table>
   </body>
 </html>
