--- a/favorites.html
+++ b/favorites.html
@@ -25,6 +25,11 @@
         <td>Padilla</td>
         <td>Elk</td>
      </tr>
+     <tr>
+       <td>Alex</td>
+       <td>Black</td>
+       <td>Orca</td>
+     </tr>
   </table>
   </body>
 </html>
