adding Jonathan's favorite animal

--- a/favorites.html
+++ b/favorites.html
@@ -7,7 +7,7 @@
   <body>
     <table BORDER="5"    WIDTH="50%"   CELLPADDING="4" CELLSPACING="3">
      <tr>
-        <th COLSPAN="2"><br><h3>Table Exercise</h3>
+        <th COLSPAN="3"><br><h3>Table Exercise</h3>
         </tr>
      </tr>
      <tr>
@@ -25,6 +25,11 @@
         <td>Padilla</td>
         <td>Elk</td>
      </tr>
+     <tr align="center">
+        <td>Jonathan</td>
+        <td>Huxhold</td>
+        <td>I like turtles</td>
+    </tr>
   </table>
   </body>
 </html>
